[package]
name = "priority-matrix"
description = "A matrix that supports per-row, per-column and whole-matrix maximum key queries."
version = "0.1.0"
edition = "2021"
authors = ["jerry73204 <jerry73204@gmail.com>"]
categories = ["data-structures"]
documentation = "https://docs.rs/priority-matrix/"
repository = "https://github.com/jerry73204/priority-matrix.git"
homepage = "https://github.com/jerry73204/priority-matrix"
readme = "README.md"
license = "MIT"

[dependencies]
itertools = "0.10.5"
priority-queue = "1.3.1"
